--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,1 +1,6 @@
+@import '../scss/variables';
 @import '../scss/base';
+@import '../scss/header';
+@import '../scss/components/counter';
+@import '../scss/layout';
+@import '../scss/media';
