--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,66 @@
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html {
+  font-size: 10px;
+}
+
 body {
-  background-color: aqua;
+  background-color: #DB524D;
+  font-family: 'Inconsolata', monospace, sans-serif;
+}
+
+.header {
+  width: 100%;
+  text-align: center;
+  margin-top: 2rem;
+}
+
+.header .logo {
+  max-width: 20rem;
+}
+
+.counter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.counter__main {
+  background-color: #ffff;
+  padding: 2.5rem 4rem;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+}
+
+.counter__main--count {
+  font-size: 15rem;
+  font-weight: bold;
+  color: #DB524D;
+}
+
+.counter .arrow {
+  color: #ffff;
+}
+
+.counter__left-arrow {
+  margin-right: 2.5rem;
+}
+
+.counter__right-arrow {
+  margin-left: 2.5rem;
 }
 /*# sourceMappingURL=main.css.map */
