--- a/src/scss/components/_counter.scss
+++ b/src/scss/components/_counter.scss
@@ -1,7 +1,14 @@
+.main-counter{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .counter{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 3rem;
 
 
     &__main{
@@ -16,7 +23,6 @@
             color: $color-pink;
         }
     }
-
     .arrow{
         color: $color-white;
     }
@@ -28,5 +34,23 @@
     &__right-arrow{
         margin-left: 2.5rem;
     }
+}
 
+.start{
+    margin-top: 3rem;
+    
+
+    &__btn{
+        font-size: 4.8rem;
+        font-weight: bold;
+        padding: .2rem 4.5rem;
+        color: $color-pink;
+        border: none;
+        border-radius: 1rem;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+        &:hover{
+            opacity: .9;
+        }
+    }
 }
