--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -107,7 +107,7 @@ body {
   margin-top: 2.5rem;
 }
 
-.start .start-btn {
+.start .pomo-btn {
   font-size: 4.8rem;
   font-weight: bold;
   padding: 0.2rem 4.5rem;
